# numerical-continuum-mechanics

./: .gitignore  .gitmodules  CMakeLists.txt  dam.d2d  dam.par  premake5.lua
MMC/: premake5.lua
MMC/include/: BarrageApplication.hpp  Mesh.hpp
MMC/shaders/: default.fs  default.vs
MMC/src/: MMC.cpp  Mesh.cpp  Plot.cpp
ncm/: CMakeLists.txt
ncm/src/: BarrageApplication.cpp  Plot.hpp  args.cpp  args.hpp  config.cpp  config.hpp  debug.cpp  debug.hpp  domain.cpp  domain.hpp  error.cpp  error.hpp  geometry.cpp  geometry.hpp  main.cpp  mesh.cpp  mesh.hpp  parse.cpp  parse.hpp  vertex.cpp  vertex.hpp
visualise/: CMakeLists.txt
visualise/shaders/: default.fs  default.vs
visualise/src/: main.F90  ncm.F90
