CMAKE_MINIMUM_REQUIRED(VERSION 3.20 FATAL_ERROR)

PROJECT(ncm_project LANGUAGES C CXX Fortran)

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDER ON)
SET(CMAKE_CONFIGURATION_TYPES Release Debug)
SET(CMAKE_DEBUG_POSTFIX -d)
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

FIND_PACKAGE(Threads REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)
IF(UNIX AND NOT APPLE)
    FIND_PACKAGE(X11 REQUIRED)
ENDIF()

ADD_SUBDIRECTORY(ncm)
ADD_SUBDIRECTORY(visualise)

