ADD_SUBDIRECTORY(deps/glf90w)

ADD_EXECUTABLE(ncm_vis)

SET_TARGET_PROPERTIES(ncm_vis PROPERTIES
    OUTPUT_NAME ncm_vis
    Fortran_FORMAT FREE
    Fortran_PREPROCESS ON
    FOLDER "ncm_vis")

SET(SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")
SET(DEPS_DIR "${CMAKE_CURRENT_SOURCE_DIR}/deps")

TARGET_COMPILE_DEFINITIONS(ncm_vis PRIVATE
    $<$<CONFIG:Debug>:_DEBUG>
    $<$<CONFIG:Release>:NDEBUG>
    $<$<PLATFORM_ID:Darwin>:__APPLE__>)

TARGET_INCLUDE_DIRECTORIES(ncm_vis PRIVATE
    "${SRC_DIR}"
    "${PROJECT_BINARY_DIR}")

TARGET_SOURCES(ncm_vis PRIVATE
    ${SRC_DIR}/main.F90
    #${DEPS_DIR}/glad/gl.F90
)

TARGET_LINK_LIBRARIES(ncm_vis PRIVATE
    glf90w)

